<resources>
    <string-array name="multi_radio_railing_buttons">
        <item>NÃO</item>
        <item>SIM</item>
        <item>MEIA-PAREDE</item>
        <item>PAREDE</item>
    </string-array>
    <string-array name="multi_radio_handrail_buttons">
        <item>SUPERIOR ESQUERDO</item>
        <item>SUPERIOR DIREITO</item>
        <item>INFERIOR ESQUERDO</item>
        <item>INFERIOR DIREITO</item>
    </string-array>
    <string-array name="multi_radio_sill_type">
        <item>NIVELADA</item>
        <item>COM DESNÍVEL</item>
        <item>COM DEGRAU</item>
        <item>COM RAMPA</item>
    </string-array>
    <string-array name="multi_radio_sidewalk_slope">
        <item>NIVELADA</item>
        
        
        <item>OUTRA SITUAÇÃO</item>
    </string-array>
    <string-array name="multi_radio_lock_type">
        <item>TRAVA DESLIZANTE</item>
        <item>PORTA CADEADO</item>
        <item>OUTRO DISPOSITIVO</item>
    </string-array>
    <string-array name="multi_radio_gate_type">
        <item>FOLHA ÚNICA</item>
        <item>FOLHA DUPLA</item>
        <item>OUTRO TIPO</item>
    </string-array>
    <string-array name="multi_radio_restroom">
        <item>MASCULINO</item>
        <item>FEMININO</item>
        <item>UNISSEX</item>
    </string-array>
    <string-array name="multi_radio_ent_restroom">
        <item>ACESSÍVEL INDEPENDENTE</item>
        <item>COLETIVO ACESSÍVEL</item>
        <item>COLETIVO NÃO ACESSÍVEL</item>
        <item>INFANTIL</item>
    </string-array>
    <string-array name="multi_radio_park_position">
        <item>PARALELA</item>
        <item>PERPENDICULAR</item>
        <item>EM ÂNGULO</item>
    </string-array>
    <string-array name="multi_radio_pool_type">
        <item>PERÍMETRO DE ATÉ 90 M</item>
        <item>PERÍMETRO ACIMA DE 90 M</item>
        <item>TANQUE DE ONDA, CORRENTEZA, ETC.</item>
        <item>TANQUE TIPO SPA, OFURÔ, ETC.</item>
    </string-array>
    <string name="counter_qnt">(%1$d)</string>
    <string name="app_name">DAEX Acessibilidade</string>
    <string name="header">Cadastro da Instituição</string>
    <string name="headerInspection">Memorial Descritivo</string>
    <string name="hint_school">Nome da Instituição</string>
    <string name="hint_city_school">Cidade</string>
    <string name="hint_contact_phone1">Telefone Contato 1</string>
    <string name="hint_contact_phone2">Telefone Contato 2</string>
    <string name="hint_name_district">Distrito</string>
    <string name="hint_responsible_visit_1">Nome Acompanhante 1</string>
    <string name="hint_responsible_visit_2">Nome Acompanhante 2</string>
    <string name="hint_responsible_job">Função Acompanhante</string>
    <string name="hint_name_responsible_visit">Nome do Acompanhante da Visita</string>
    <string name="hint_total_students">Total de Estudantes</string>
    <string name="hint_total_students_pcd">Estudantes PCD</string>
    <string name="hint_total_workers">Total de Funcionários</string>
    <string name="hint_total_workers_pcd">Funcionários PCD</string>
    <string name="hint_total_workers_libras">Quantidade Funcionários Capacitados Libras</string>
    <string name="hint_date_inspection">Data Inspeção</string>
    <string name="hint_address_street">Endereço da Instituição</string>
    <string name="hint_visit_team">Membros da Equipe de Inspeção</string>
    <string name="hint_address_neighborhood">Bairro</string>
    <string name="hint_address_number">Número</string>
    <string name="hint_address_complements">Complemento</string>
    <string name="hint_students_pcd_description">Deficiênicas e Impedimentos dos Alunos</string>
    <string name="hint_workers_pcd_description">Deficiênicas e Impedimentos dos Funcionários</string>
    <string name="label_pick_memorial_option">Local Vistoriado</string>
    <string name="hint_external_floor">Tipo do Piso</string>
    <string name="label_save_close_button">Salvar Cadastro</string>
    <string name="label_save_continue_button">Salvar e Continuar</string>
    <string name="label_cancel_button">Cancelar</string>
    <string name="label_add_register_button">Adicionar Cadastro</string>
    <string name="label_update_close_button">Atualizar e Fechar</string>
    <string name="label_update_continue_button">Atualizar e Continuar</string>
    <string name="label_save_quit_button">Salvar e Sair</string>
    <string name="label_save_finish_button">Salvar e Finalizar</string>
    <string name="req_field_error">Campo Obrigatório</string>
    <string name="wrong_input_error">Este campo só aceita números</string>
    <string name="invalid_input_error">Este número é inválido</string>
    <string name="empty_fields">Um ou mais campos não foram preenchidos corretamente</string>
    <string name="unexpected_error">Ocorreu um erro. Por Favor, tente novamente!"</string>
    <string name="working_hours">Horário de Funcionamento:</string>
    <string name="offered_services">Serviços Prestados pela Instituição:</string>
    <string name="morning">Matutino: Das</string>
    <string name="afternoon">Vespert.: Das</string>
    <string name="evening">Noturno: Das</string>
    <string name="to">às</string>
    <string name="school_level1">Maternal: Nível</string>
    <string name="school_level2">Pré-Escola: Nível</string>
    <string name="school_level3">Fundamental I:</string>
    <string name="school_level4">Fundamental II:</string>
    <string name="school_level5">Ensino Médio:</string>
    <string name="school_EJA">E.J.A.:</string>
    <string name="school_grade">ano</string>
    <string name="grade_o">º</string>
    <string name="students_ages">Idades Atendidas pela Instituição:</string>
    <string name="ao">ao</string>
    <string name="label_exp_dropdown">Escolha um item</string>
    <string name="header_has_sia">Possui SIA?</string>
    <string name="radio_button_yes">SIM</string>
    <string name="radio_button_no">NÃO</string>
    <string name="frag_ext_gate">Portão</string>
    <string name="hint_ext_gate_width">Largura do Portão de Acesso (m)</string>
    <string name="hint_ext_trail_height">Altura do Trilho do Portão de Acesso (mm)</string>
    <string name="frag_ext_trail_ledge">O portão possui rampa para o trilho?</string>
    <string name="radio_button_has_it">POSSUI</string>
    <string name="radio_button_doesnt_have_it">NÃO POSSUI</string>
    <string name="radio_button_unnecessary">DESNECESSÁRIO</string>
    <string name="radio_button_inwards">INTERNO</string>
    <string name="radio_button_outwards">EXTERNO</string>
    <string name="frag_ext_gate_obstacles">Entrada Possui Cancelas ou Catracas?</string>
    <string name="label_add_frag_entry">Adicionar</string>
    <string name="frag_ent_gate_payphone">Entrada possui telefones públicos?</string>
    <string name="label_waterfountain_height">Altura do Bebedouro</string>
    <string name="label_cupholder_height">Altura do Porta-copos</string>
    <string name="label_distance_waterfountain">Aproximação</string>
    <string name="label_button_save">GRAVAR</string>
    <string name="label_button_cancel">CANCELAR</string>
    <string name="hint_sidewalk_address">Rua de Localização da Calçada</string>
    <string name="hint_sidewalk_status">Observações sobre acessibilidade do piso</string>
    <string name="hint_sidewalk_width">Largura Total da Calçada (m)</string>
    <string name="label_has_special_floor">Esta calçada possui composição de piso tátil direcional e de alerta?</string>
    <string name="label_sidewalk_slope">Esta calçada possui rebaixamento?</string>
    <string name="hint_ramp_width">Largura da Rampa (m)</string>
    <string name="hint_ramp_slope">Inclinação da Rampa (%)</string>
    <string name="hint_visual_signal">Sinalização Visual</string>
    <string name="hint_visual_signals">Sinalização Visual Vertical</string>
    <string name="label_room_entrance_door">Dimensões da Porta de Entrada</string>
    <string name="hint_uneven_door">Desnível da Porta</string>
    <string name="label_door_ramp">Porta com rampa?</string>
    <string name="hint_room_carpet">Capacho da Sala</string>
    <string name="hint_circulation_room">Espaço de circulação da sala</string>
    <string name="label_table_register">Cadastro de Mesas e Suas Dimensões</string>
    <string name="hint_handle_height">Altura da maçaneta (m)</string>
    <string name="secretary_helping_desk">Dimensões Balcão de Atendimento</string>
    <string name="helping_desk_height">Altura do Balcão</string>
    <string name="helping_desk_width">Profundidade do Balcão</string>
    <string name="spin_180_degrees">Giro de 180 graus</string>
    <string name="secretary_seats">Número assentos fixos Sala de Espera</string>
    <string name="hint_parking_lot_total_vacancy">Total de Vagas no Estacionamento</string>
    <string name="floor_type">Tipo de Piso</string>
    <string name="parking_lot_signal">Sinalização do Estacionamento</string>
    <string name="hint_stairs_width">Largura da Escadaria (m)</string>
    <string name="hint_handrail_height">Altura do Corrimão (m)</string>
    <string name="hint_initial_handrail_extensions_length">Prolongamento Inicial (m)</string>
    <string name="hint_final_handrail_extensions_length">Prolongamento Final (m)</string>
    <string name="hint_handrail_grip">Diâmetro Empunhadura do Corrimão (mm)</string>
    <string name="hint_railing">Guarda-Corpo</string>
    <string name="hint_tactile_signal">Sinalização Tátil</string>
    <string name="hint_ramp_acclivity">Inclinação da Rampa</string>
    <string name="label_counter_cafeteria_measurements">Dimensões do Balcão</string>
    <string name="hint_counter_height">Altura Balcão</string>
    <string name="hint_frontal_approx">Aproximação Frontal</string>
    <string name="hint_PCR_spaces">Espaço PCR</string>
    <string name="hint_blackboard_height">Altura da Borda Inferior (m)</string>
    <string name="label_distance_shelves">Distância entre as estantes é igual ou maior que 90 centímetros?</string>
    <string name="label_PCR_maneuver">Existem bolsões para manobras de PCR nos corredores entre as estantes
        à cada 15 metros?</string>
    <string name="label_button_proceed_register">CONTINUAR</string>
    <string name="gate_obstacle_location_hint">Ponto de Referência Obstáculo de Entrada</string>
    <string name="hint_gate_obstacles_obs">Observações sobre o obstáculo</string>
    <string name="label_gate_obs_type_header">Qual é o tipo de acesso utilizado?</string>
    <string name="radio_option_gate">PORTA DE ACESSO</string>
    <string name="radio_option_gate_bar">CANCELA</string>
    <string name="label_pavement_tactile_sign_header">Há sinalização tátil de pavimento no nível mais baixo e mais alto do lance?</string>
    <string name="radio_button_not_applicable">NÃO SE APLICA</string>
    <string name="hint_pavement_tact_sign_obs">Observações da sinalização tátil de pavimento</string>
    <string name="label_tactile_floor_header">Há presença de piso tátil de alerta no nível mais baixo do lance?</string>
    <string name="hint_tactile_floor_obs">Observações sobre o piso tátil</string>
    <string name="label_railing_beacon_register_header">Cadastro de guarda-corpos e balizamentos</string>
    <string name="label_button_handrails">Corrimãos e Prolongamentos</string>
    <string name="label_button_railing">Guarda-corpo e balizamento</string>
    <string name="label_handrail_header">Cadastro de corrimãos e seus prolongamentos</string>
    <string name="label_ramp_flights_header">Cadastro dos lances da rampa</string>
    <string name="label_inclination_button">Cadastro de Inclinações</string>
    <string name="label_inclination_ramp_header">Cadastro das inclinações do lance da rampa</string>
    <string name="hint_obs">Observações</string>
    <string name="header_access_sinks">Cadastro de Lavatórios Acessíveis</string>
    <string name="header_has_access_sink">Há presença de lavatório acessível?</string>
</resources>