<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RampFlightFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ramp_flight_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_ramp_flights_header"
            android:textSize="@dimen/section_header"/>

        <!-- Inserir outro texto para indicar qual lance de escada está sendo cadastrado  -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ramp_width_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ramp_flight_header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/usual_padding"
            android:hint="@string/hint_ramp_width">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ramp_width_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ramp_inclination_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ramp_width_field"
            android:layout_marginTop="@dimen/top_margins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_inclination_ramp_header"
            android:textSize="@dimen/section_header"/>

        <Button
            android:id="@+id/inclination_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ramp_inclination_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/usual_padding"
            android:backgroundTint="@color/purple_200"
            android:text="@string/label_inclination_button"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tactile_sign_pavement_ramp_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inclination_button"
            android:layout_marginTop="@dimen/top_margins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_pavement_tactile_sign_header"
            android:textSize="@dimen/section_header"/>

        <RadioGroup
            android:id="@+id/pavement_tactile_sign_ramp_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tactile_sign_pavement_ramp_header"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_one"
                android:text="@string/radio_button_no"
                android:textSize="15sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_one"
                android:text="@string/radio_button_yes"
                android:textSize="15sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_one"
                android:text="@string/radio_button_not_applicable"
                android:textSize="15sp"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pavement_tact_sign_obs_ramp_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pavement_tactile_sign_ramp_radio"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/usual_padding"
            android:hint="@string/hint_pavement_tact_sign_obs">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pavement_tact_sign_obs_ramp_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tactile_floor_ramp_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pavement_tact_sign_obs_ramp_field"
            android:layout_marginTop="@dimen/top_margins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_tactile_floor_header"
            android:textSize="@dimen/section_header"/>

        <RadioGroup
            android:id="@+id/tactile_floor_ramp_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tactile_floor_ramp_header"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_one"
                android:text="@string/radio_button_no"
                android:textSize="15sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_one"
                android:text="@string/radio_button_yes"
                android:textSize="15sp"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tactile_floor_obs_ramp_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tactile_floor_ramp_radio"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/usual_padding"
            android:hint="@string/hint_tactile_floor_obs">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tactile_floor_obs_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/railing_beacon_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tactile_floor_obs_ramp_field"
            android:layout_marginTop="@dimen/top_margins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_railing_beacon_register_header"
            android:textSize="@dimen/section_header"/>

        <Button
            android:id="@+id/railing_beacon_ramp_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/railing_beacon_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/usual_padding"
            android:backgroundTint="@color/purple_200"
            android:text="@string/label_button_railing"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/handrail_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/railing_beacon_ramp_button"
            android:layout_marginTop="@dimen/top_margins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_handrail_header"
            android:textSize="@dimen/section_header"/>

        <Button
            android:id="@+id/handrail_ramp_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/handrail_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/usual_padding"
            android:backgroundTint="@color/purple_200"
            android:text="@string/label_button_handrails"
            android:textColor="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_flight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/top_margins"
            android:layout_marginTop="32dp"
            android:text="@string/label_button_save"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/handrail_ramp_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_flight"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/top_margins"
            android:text="@string/label_button_cancel"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/save_flight"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>