<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RestSinkAccessFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/access_sink_constraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.89"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/access_sink_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/section_header_bigger"
            android:text="@string/header_access_sinks"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/has_access_sink_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual_padding"
            android:text="@string/header_has_access_sink"
            android:textSize="@dimen/section_header"
            app:layout_constraintTop_toBottomOf="@id/access_sink_header" />

        <RadioGroup
            android:id="@+id/has_access_sink_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/has_access_sink_header">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_one"
                android:text="@string/radio_button_no"
                android:textSize="@dimen/radio_button_text" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_one"
                android:text="@string/radio_button_yes"
                android:textSize="@dimen/radio_button_text" />
        </RadioGroup>

        <TextView
            android:id="@+id/has_access_sink_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_fields"
            android:textColor="@color/error_message"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/has_access_sink_radio" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/not_access_sink_obs_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual_padding"
            android:hint="@string/hint_obs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/has_access_sink_error"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/not_access_sink_obs_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:lines="@integer/multiline_obs_field"
                android:overScrollMode="always"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/access_sink_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual_padding"
            app:layout_constraintTop_toBottomOf="@id/not_access_sink_obs_field"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_sink_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/usual_padding"
        android:text="@string/label_button_proceed_register"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/access_sink_constraint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_sink_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/top_margins"
        android:text="@string/label_button_cancel"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/save_sink_button"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>