<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ChildRegisters.GateObsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/usual_padding"
        android:paddingEnd="@dimen/usual_padding">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/gate_obstacle_location_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual_padding"
            android:hint="@string/gate_obstacle_location_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gate_obstacle_location_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_gate_obstacle_type"
            app:layout_constraintTop_toBottomOf="@id/gate_obstacle_location_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual_padding"
            android:text="@string/label_gate_obs_type_header"
            android:textSize="@dimen/section_header"/>

        <RadioGroup
            android:id="@+id/gate_obstacle_type_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_gate_obstacle_type"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_option_gate_bar"
                android:layout_weight="@integer/weight_one"
                android:textSize="@dimen/radio_button_text"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_one"
                android:text="@string/radio_option_gate"
                android:textSize="@dimen/radio_button_text"/>

        </RadioGroup>

        <TextView
            android:id="@+id/gate_obstacle_type_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_fields"
            android:textColor="@color/error_message"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gate_obstacle_type_radio" />

        <FrameLayout
            android:id="@+id/gate_obs_type_child_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/usual_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gate_obstacle_type_error" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/gate_obstacle_obs_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_gate_obstacles_obs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gate_obs_type_child_fragment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gate_obstacle_obs_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:lines="3"
                android:overScrollMode="always"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_gate_obstacle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/top_margins"
            android:text="@string/label_button_save"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gate_obstacle_obs_field" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_gate_obstacle"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/top_margins"
            android:text="@string/label_button_cancel"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/save_gate_obstacle"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>